@startuml Models - Article Hierarchy

' ============= STYLING =============
skinparam backgroundColor #FEFEFE
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classFontName Arial
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #2C3E50
skinparam classBorderThickness 1.5
skinparam ArrowColor #34495E
skinparam ArrowThickness 2
skinparam roundcorner 5

' ============= ENUMS =============
enum Type <<enumeration>> {
    SCIE = 1
    SCOPUS = 2
    CONFERENCE = 3
    OTHER = 4
    CUSTOM = 5
}

enum ArticleStatus <<enumeration>> {
    DRAFT = 11
    SUBMITTED = 12
    UNDER_REVIEW = 13
    REVISIONS = 14
    ACCEPTED = 15
    REJECTED = 16
    PUBLISHED = 17
}

' ============= ABSTRACT ARTICLE =============
abstract class Article <<abstract>> {
    # id: string
    # abstract: string
    # n_citation: int
    # title: string
    # venue: string
    # year: int
    # type: Type
    # status: ArticleStatus
    # refs: vector<string>
    # authors: vector<string>
    __
    + getId(): string
    + getTitle(): string
    + getVenue(): string
    + getCitation(): int
    + getYear(): int
    + getType(): Type
    + getStatus(): ArticleStatus
    __
    + setTitle(t: string): void
    + setVenue(v: string): void
    + setCitation(c: int): void
    + setYear(y: int): void
    __
    + {abstract} clone(): unique_ptr<Article>
    + {abstract} to_json(): json
}

' ============= SCIE ARTICLE =============
class SCIE_Article <<SCIE>> {
    - impactFactor: double
    - qRank: int
    __
    + getImpactFactor(): double
    + setImpactFactor(value: double): void
    + getQRank(): int
    + setQRank(q: int): void
    __
    + clone(): unique_ptr<Article>
    + to_json(): json
}

' ============= SCOPUS ARTICLE =============
class SCOPUS_Article <<SCOPUS>> {
    - sjr: double
    - hIndex: int
    __
    + getSJR(): double
    + setSJR(s: double): void
    + getHIndex(): int
    + setHIndex(h: int): void
    __
    + clone(): unique_ptr<Article>
    + to_json(): json
}

' ============= CONFERENCE ARTICLE =============
class CONFERENCE_Article <<Conference>> {
    - conferenceRank: string
    - location: string
    - acceptanceRate: double
    __
    + getRank(): string
    + setRank(r: string): void
    + getLocation(): string
    + setLocation(l: string): void
    + getAcceptanceRate(): double
    __
    + clone(): unique_ptr<Article>
    + to_json(): json
}

' ============= OTHER ARTICLE =============
class OTHER_Article <<Other>> {
    __
    + clone(): unique_ptr<Article>
    + to_json(): json
}

' ============= CUSTOM ARTICLE =============
class CUSTOM_Article <<Custom>> {
    - customTypeName: string
    __
    + getCustomTypeName(): string
    + setCustomTypeName(name: string): void
    __
    + clone(): unique_ptr<Article>
    + to_json(): json
}

' ============= RELATIONSHIPS =============
Article <|-- SCIE_Article
Article <|-- SCOPUS_Article
Article <|-- CONFERENCE_Article
Article <|-- OTHER_Article
Article <|-- CUSTOM_Article

Article --> Type : <<uses>>
Article --> ArticleStatus : <<uses>>

' ============= NOTE =============
note top of Article
  **Lớp trừu tượng Article**
  Áp dụng Clone pattern cho
  polymorphic copy và JSON
  serialization
end note

note bottom of SCIE_Article
  **SCIE Article**
  • Impact Factor (IF)
  • Q-rank (Q1-Q4)
end note

note bottom of SCOPUS_Article
  **SCOPUS Article**
  • SJR ranking
  • H-index
end note

note bottom of CONFERENCE_Article
  **Conference Article**
  • Conference rank
  • Location
  • Acceptance rate
end note

@enduml
